--- a/README
+++ b/README
@@ -13,16 +13,16 @@ _>\/| |(_)|_)_>\/_>
 (_|(/__>(_| ||_)|_|(_)| |
 ~~~~~~~~~~~~~|~~~~~~~~~~~
        id3  is  a  mass tagger for audio files. This means it is
-       meant  to  be  used  to non-interactively perform similar
-       updates to the meta-information in any number of files in
-       just a single command.
+       meant  to be used to non-interactively perform operations
+       on  the meta-information in a number of files with just a
+       single command.
 
        Operations  performed  might consist of replacing certain
        information,   or  adding,  replacing,  or  removing  all
        meta-information present in an audio file.
 
        To  take  advantage  of  this,  it has the ability to use
-       portions of filenames to fill in portions of a tag.
+       portions of the filenames to fill in portions of the tag.
 
        id3  currently  supports  the  old-style  ID3 format with
        track-number  extension  (ID3  v1.1), as well as the more
@@ -62,9 +62,8 @@ _>\/| |(_)|_)_>\/_>
        -g "genre"
        -n "tracknr"
             add/replace  the  specified  fields  with the values
-            given.  Use  of  "" is recommended, if not required.
-            field  values  are parsed for substitution commands,
-            see the section headed `SUBSTITUTION' below.
+            given.  Field  values  are  scanned for substitution
+            commands, see `SUBSTITUTION' below.
 
             Genres  can  be  specified  either  directly or with
             their assigned number, regardless of tag format.
@@ -72,7 +71,7 @@ _>\/| |(_)|_)_>\/_>
        -dFRAME
             remove all occurrences of frames named `FRAME'. This
             is  meaningless  on  tag  formats that do not have a
-            notion  of  `frames',  such  as  ID3 v1. Consult the
+            notion  of  `frames',  such  as  ID3v1.  Consult the
             format documentation for valid `FRAME' names.
 
        -wFRAME data
@@ -87,9 +86,9 @@ _>|_||_)_> |_| |_|_||_|(_)| |
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        id3  can perform `printf-like' substitution on the values
        prior  to writing them to a tag. Note that if you want to
-       use  this, you HAVE TO enclose the wildcard specification
-       in  double  quotes so your shell does not perform pattern
-       expansion on it.
+       use  pattern  matching,  you HAVE TO enclose the wildcard
+       specification  on  the  commandline  in  double quotes to
+       prevent your shell from expanding any wildcards.
 
       `%<modifiers>N' where N <- [0..9]
             replaced  with  the portion of the filename matching
@@ -101,7 +100,7 @@ _>|_||_)_> |_| |_|_||_|(_)| |
             c    Capitalize the substituted value
             _    Do not replace underscores with spaces
 
-      `%%'  replaced with a single `%'.
+      `%%'  replaced with a single `%'
 
       `%n'  replaced with the newline ('\n') character
             (intended for use with -wFRAME)
@@ -117,10 +116,10 @@ _>|_||_)_> |_| |_|_||_|(_)| |
             Add a simple tag to a file.
 
        $ id3 -d *.mp3
-            Removes all tags from all mp3's.
+            Removes all ID3v1 tags from all mp3's.
 
        $ id3 -a "TAFKAT" -n "%1" -t "%c2" "*. *.mp3"
-            Sets id3 fields in correspondence with the files:
+            Sets tag fields correspondingly:
              01. my_song.mp3  [=>] "01" "My Song"
              02. untitled.mp3 [=>] "02" "Untitled"    etc..
 
@@ -156,7 +155,7 @@ _>|_||_)_> |_| |_|_||_|(_)| |
        data  several  times,  introducing possible opportunities
        for  data  corruption and file fragmentation. And because
        ID3v2  is  complex,  program code is complex, and as such
-       ore prone to contain errors.
+       more likely to contain errors.
 
        ID3v2  goes  way  beyond the demands of simple meta-data,
        and  tries  to  support embedding general purpose data in
@@ -165,11 +164,12 @@ _>|_||_)_> |_| |_|_||_|(_)| |
  _ _ ._ _ ._  _._|_o|_ o|o_|_
 (_(_)| | ||_)(_| |_||_)||| |_\/
 ~~~~~~~~~~|~~~~~~~~~~~~~~~~~~/~
-       id3  has a built-in genre list of 148 genres. If pass the
-       -g parameter a name instead of a number when using ID3v1,
-       id3  tries  to  find  the  specified  genre in this list.
-       Capitalization  doesn't  matter,  however  exact spelling
-       does. For the genre numbers and spelling, see `id3v1.c'.
+       id3  has a built-in genre list of 148 genres. If you pass
+       the  -g  parameter  a name instead of a number when using
+       ID3v1,  id3  tries  to  find  the specified genre in this
+       list.   Capitalization   doesn't  matter,  however  exact
+       spelling  does.  For  the genre numbers and spelling, see
+       `id3v1.c' in the source distribution.
 
        id3  does not support ID3v2 v2.0 or earlier, neither does
        it  support  the  new ID3v2 v4.0 (yet?). It also does not
@@ -180,3 +180,8 @@ _>|_||_)_> |_| |_|_||_|(_)| |
 ~~~~~~~~~~~~~~~~~
        squell ^ zf! (squell@xms.ms, squell@goth.net)
 
+ _. __|_ _| 
+(_|(_)|_(_| 
+~~|~~~~~~~~
+       ALL FANATICS MUST DIE!
+            
