--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,10 @@ Changelog for 'id3'.
 Todo list:
 
   Support for Ogg Vorbis
+  Options for forcing re-packing id3v2
+  Command stacking    ("-nat 1 art tit == -n 1 -a art -t tit")
+  Shorthand Wildcards ("%n. %t.mp3" == -n %1 -t %2 "*. *.mp3")
   Join main.cpp & view.cpp
+ !write_mp3s
 
 
