--- a/INSTALL
+++ b/INSTALL
@@ -86,18 +86,14 @@ Win32/DOS systems. You should have. :)
 ===
 Customizing
 
-You can set the 'ZERO_BASED' define to '1' in setid.cpp (or add -DZERO_BASED
-to CFLAGS in your makefile) if you would like to start counting wildcards
-in the commandline parameters at 0 instead of 1, making the range %0..%9 map
-to the 1st .. 10th wildcard (instead of having %0 match the 10th wildcard)
+Some things you can tweak in the definition of smartID3, in setid3.h:
 
-Also in setid3.cpp: %n emits a CR/LF pair, to conform to Winamp behaviour,
-even though ID3v2 documents mandate LF only. #define NO_CRLF or add -DNO_CRLF
-to CFLAGS if you want strict behaviour.
+Set the ZERO_BASED constant to 1 (or true), if you would like to start
+counting wildcards in the commandline parameters at 0 instead of 1, making the
+range %0..%9 map to the 1st .. 10th wildcard.
 
 If you, for some reason, happen to dislike having '%' as a special character,
-you can replace it with whatever you want by changing the 'VAR' constant
-in the definition of smartID3 in setid3.h.
+you can replace it with whatever you want by changing the 'VAR' constant.
 
 ---------------------------------------------------------------
 | links
