--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Changelog for 'id3'.
 
 2003-189 (W28):                                ---------[v0.60]-----------
   First public release
+  setid3.cpp: Removed silly packing check
   setid3v2.cpp:97: Added "&& src". Whoopsee! :)
   id3v2.c: writef() now writes ID3v2 tags to files < 10 bytes. :)
 
