--- a/CHANGES
+++ b/CHANGES
@@ -28,9 +28,27 @@ Changelog for 'id3'.
 2003-198 (W29)
   Added conditional stdint.h include, some dirent.h implementations need it
 
+2003-199 (W29)
+  Created vorbis.cpp framework & crc32.h
+
+2003-210 (W31)
+  Tried to generize crc32.h (postponed), some tidbits added to vorbis.cpp
+
+2003-215 (W31)
+  Fleshed out large parts of the public interface of vorbis_in
+
+2003-216 (W32)
+  id3v2.c:268: Added check on tmpnam(0) returning NULL
+  id3v2.c:66:  Added safety to see if copyfile() halted because of eof
+  setid3v2.cpp:89: [BUGFIX] w_ptr constructor sometimes got an uninitialized
+    allocation value (went by unnoticed because of alloc-on-write?). Harmless.
+    Fix: Removed this feature - unnecessary anyway.
+  setid3v2.cpp:95: Only read pervious ID3v2 if necessary.
+
 Todo list:
 
-  Better foolproof
+  Fix inconsistent error/help messages
+  Check if ID3 tag properly written?
   Support for Ogg Vorbis
   Options for forcing re-packing id3v2
   Command stacking    ("-nat 1 art tit == -n 1 -a art -t tit")
