--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------
-| id3 v0.70
+| id3 v0.71
 -------------------------------------------------------------
 
 the contents of the source distribution:
@@ -95,6 +95,9 @@ range %0..%9 map to the 1st .. 10th wildcard.
 If you, for some reason, happen to dislike having '%' as a special character,
 you can replace it with whatever you want by changing the 'VAR' constant.
 
+Adding "-DUSE_TMPNAM" to CFLAGS will make sure id3v2.c uses tmpnam()
+instead of mktemp() for generating temporary file names.
+
 ---------------------------------------------------------------
 | useful links
 -------------------------------------------------------------
@@ -115,5 +118,6 @@ you can replace it with whatever you want by changing the 'VAR' constant.
   http://michael.tippach.bei.t-online.de/wdosx/
 
 ---------------------------------------------------------------
-| contact: (pri.) squell@xms.ms, (alt.) squell@goth.net
+| contact: (pri.) squell@goth.net, (alt.) squell@xms.ms
 -------------------------------------------------------------
+
